Upgraded scrollbar and fix content main

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,5 +1,7 @@
 @use './partials/variables' as *;
 @use './partials/classpage' as *;
+@use './partials/srcollbar' as *;
+
 
 $fa-font-path: './webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
@@ -15,7 +17,7 @@ $font-family: 'Poppins', sans-serif;
     width: 100%;
     height: 100vh;
     background-color: $black;
-    overflow-y: auto;
+    overflow-y: hidden;
     color: $white;
     font-family: $font-family;
 }
