--- a/src/assets/partials/_srcollbar.scss
+++ b/src/assets/partials/_srcollbar.scss
@@ -1,1 +1,22 @@
 @use './variables' as *;
+
+/* ===== Scrollbar  ===== */
+* {
+    scrollbar-width: auto;
+    scrollbar-color: $white $black;
+
+    // Chrome, Edge, and Safari
+    &::-webkit-scrollbar {
+        width: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: $white;
+        border-radius: 10px;
+        border: 3px solid $white;
+    }
+}
